# term-gpt

./: Cargo.toml  LICENSE  README.md
src/: main.rs
