[package]
name = "term-gpt"
version = "0.2.0"
edition = "2024"
license = "MIT"
description = "A fast, colorful ChatGPT CLI for your terminal!"
repository = "https://github.com/reidctl/term-gpt.git"
readme = "README.md"
categories = ["command-line-utilites", "text-processing"]
keywords = ["chatgpt", "cli", "terminal", "ai"]

[[bin]]
name = "gpt"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
colored = "2"
